# ezql

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
src/ezql/: __init__.py  cli.py  client.py  validator.py
tests/: conftest.py  test_queries.py
