[project]
name = "ezql"
version = "0.1.1"
description = "EZQL - simple wrapper around asyncpg with type safety checks and CLI validator"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "icecream>=2.2.0",
    "pydantic>=2.4.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "typer>=0.25.1",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[project.scripts]
ezql = "ezql.cli:app"